seminarix-handbook (0.1.1-1) unstable; urgency=low

  * Initial release
  * desktop menu added
  * debian/control fixed
  * second fix debian/control

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 22 Nov 2007 10:43:30 +0100