@@ -188,7 +188,7 @@ Summenformeln bestimmen und Molmassen berechnen lassen kann.)</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/chemtool">Chemtool starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://ruby.chemie.uni-freiburg.de/%7Emartin/chemtool/chemtool.html" target="_blank">Chemtool</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" target="_blank" href="http://www.linux-magazin.de/Artikel/ausgabe/1998/07/Chemie/chemie.html">Info Chemtool</a></dt>
+  <dt><a href="http://ruby.chemie.uni-freiburg.de/%7Emartin/chemtool/chemtool.html" target="_blank">Chemtool</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" target="_blank" href="http://www.linux-magazin.de/Artikel/ausgabe/1998/07/Chemie/chemie.html">Info Chemtool</a></dt>
 
   <dd>&nbsp;</dd>
 
@@ -206,8 +206,7 @@ Elemente enth&auml;lt. Java-Applet.</dd>
 
 
 <dl>
-  <dt><a href="applications:/usr/bin/gperiodic">Gperiodic
-starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a target="_blank" href="http://gperiodic.seul.org/">GPeriodic</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://gperiodic.seul.org/screenshots/gperiodic.en.gif" target="_self">Screenshot Gperiodic</a> (204 kb)</dt>
+  <dt><a target="_blank" href="http://gperiodic.seul.org/">GPeriodic</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://gperiodic.seul.org/screenshots/gperiodic.en.gif" target="_self">Screenshot Gperiodic</a> (204 kb)</dt>
 
   <dd>&nbsp;</dd>
 
@@ -224,7 +223,7 @@ verschiedenen Atomen Molek&uuml;le zusammen zu bauen sind.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/katomic">KAtomic starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.linuxia.de/packages/Debian/stable/Detail/katomic?id=SzsH7oqK&amp;mv_pc=57" target="_blank">KAtomic</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://docs.kde.org/stable/de/kdegames/katomic/index.html" target="_blank">Info KAtomic</a></dt>
+  <dt><a href="http://www.linuxia.de/packages/Debian/stable/Detail/katomic?id=SzsH7oqK&amp;mv_pc=57" target="_blank">KAtomic</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://docs.kde.org/stable/de/kdegames/katomic/index.html" target="_blank">Info KAtomic</a></dt>
 
   <dd>&nbsp;</dd>
 
@@ -248,7 +247,7 @@ M&ouml;glichkeit Molek&uuml;lmassen zu berechnen.)</dd>
 
 <dl>
 
-  <dt><a target="_blank" href="http://kalzium.klik.atekon.de/">Kalzium</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://docs.kde.org/development/de/kdeedu/kalzium/index.html" target="_blank">Info 1 Kalzium Kalzium</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://edu.kde.org/kalzium/screenshots.php" target="_blank">Info
+  <dt><a class="info" href="http://docs.kde.org/development/de/kdeedu/kalzium/index.html" target="_blank">Info 1 Kalzium Kalzium</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" href="http://edu.kde.org/kalzium/screenshots.php" target="_blank">Info
 2 Kalzium</a></dt>
 
   <dd>&nbsp;</dd>
