@@ -155,7 +155,6 @@ lernen.</dd>
 
 
 <dt>
-<a target="_blank" href="applications:/usr/bin/hanzim">Hanzim starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="http://hanzim.klik.atekon.de/">Hanzim</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 Info Hanzim
 </dt>
@@ -175,8 +174,7 @@ das inzwischen f&uuml;r mehr als 15 Sprachen zur Verf&uuml;gung steht.</dd>
 
 <dl>
 
-  <dt>KDict starten <span class="italicred">(nur bei Onlineverbindung)</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a target="_blank" href="http://www.dict.org/">KDict</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a target="_blank" href="http://www.dict.org/">KDict</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="info" href="http://docs.kde.org/development/de/kdenetwork/kdict/" target="_blank">Info KDict</a></dt>
 
   <dd>&nbsp;</dd>
@@ -218,8 +216,7 @@ Unter Einstellungen sind verschiedene Sprachkombinationsm&ouml;glichkeiten einst
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/klatin">KLatin starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="http://klatin.klik.atekon.de/" target="_blank">KLatin</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a href="http://klatin.klik.atekon.de/" target="_blank">KLatin</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="info" href="http://www.linux-user.de/ausgabe/2004/08/036-kdeedu/index.html" target="_blank">Info KLatin</a></dt>
 
   <dd>&nbsp;</dd>
@@ -249,8 +246,7 @@ gelegt.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/kvoctrain">KVocTrain starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="http://kvoctrain.klik.atekon.de/" target="_blank">KVocTrain</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a href="http://kvoctrain.klik.atekon.de/" target="_blank">KVocTrain</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="info" href="http://www.linux-magazin.de/Artikel/ausgabe/2000/04/Ktools/ktools16.html" target="_blank">Info KVocTrain</a></dt>
 
   <dd>&nbsp;</dd>
@@ -278,8 +274,7 @@ Pauker.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/kwordquiz">KWordQuiz starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="http://kwordquiz.klik.atekon.de/" target="_blank">KWordQuiz</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a href="http://kwordquiz.klik.atekon.de/" target="_blank">KWordQuiz</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="info" href="http://www.linux-user.de/ausgabe/2004/03/046-korner/index.html" target="_blank">Info KWordQuiz</a></dt>
 
   <dd>&nbsp;</dd>
