@@ -163,8 +163,7 @@ wiederverwendet werden.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/klogic">KLogic starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a target="_blank" href="http://www.a-rostin.de/klogic/indexd.html">KLogic</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a target="_blank" href="http://www.a-rostin.de/klogic/indexd.html">KLogic</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     <a class="info" href="http://www.a-rostin.de/klogic/indexd.html" target="_blank">Info Klogic</a></dt>
 
   <dd>&nbsp;</dd>
@@ -193,8 +192,7 @@ Signalen vorgesehen.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/ksimus">KSimus starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a target="_blank" href="http://ksimus.berlios.de/">KSimus</a>&nbsp;&nbsp;|&nbsp;&nbsp;</dt>
+  <dt><a target="_blank" href="http://ksimus.berlios.de/">KSimus</a>&nbsp;&nbsp;|&nbsp;&nbsp;</dt>
 
   <dd>&nbsp;</dd>
 
@@ -221,8 +219,7 @@ werden.</dd>
 
 <dl>
 
-  <dt><a href="applications:/usr/bin/pcb">PCB starten</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a target="_blank" href="http://pcb.sourceforge.net/">PCB</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <dt><a target="_blank" href="http://pcb.sourceforge.net/">PCB</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     </dt>
 
   <dd>&nbsp;</dd>
