@@ -4,5 +4,6 @@ seminarix-handbook (0.1.1-1) unstable; urgency=low
   * desktop menu added
   * debian/control fixed
   * second fix debian/control
+  * technik.html chemie.html sprachen.html updated
 
- -- Horst Tritremmel <hjt@sidux.com>  Thu, 22 Nov 2007 10:43:30 +0100
+ -- Horst Tritremmel <hjt@sidux.com>  Thu, 22 Nov 2007 12:19:59 +0100
